--- a/pom.xml
+++ b/pom.xml
@@ -9,8 +9,8 @@
 		<version>2.6.2</version>
 		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.vendas</groupId>
-	<artifactId>vendas</artifactId>
+	<groupId>com.sale</groupId>
+	<artifactId>Sale</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>vendas</name>
 	<description>Demo project for Spring Boot</description>
@@ -28,16 +28,19 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
-		
 		<dependency>
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
 			<scope>runtime</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-devtools</artifactId>
 		</dependency>
 	</dependencies>
 
