--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,6 @@
 spring.profiles.active=${APP_PROFILE:test}
 
 spring.jpa.open-in-view=true
+
+default.sender=gabrielbatista1551@gmail.com
+default.recipient=gabrielbatista1551@gmail.com
