--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,6 @@ spring.jpa.open-in-view=true
 
 default.sender=gabrielbatista1551@gmail.com
 default.recipient=gabrielbatista1551@gmail.com
+
+jwt.secret=AssinaturaPadraoDeIdentificacaoUnicaJWTT
+jwt.expiration=0
