Estrutura AWS + Configuração de Upload de Imagens + config padrão de img

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,4 +6,13 @@ default.sender=gabrielbatista1551@gmail.com
 default.recipient=gabrielbatista1551@gmail.com
 
 jwt.secret=AssinaturaPadraoDeIdentificacaoUnicaJWTT
-jwt.expiration=0
+jwt.expiration=86400000
+
+aws.access_key_id=AKIAR2M7SZZHHMAIGPU2
+aws.secret_access_key=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
+s3.bucket=digicommercialbucket
+s3.region=sa-east-1
+
+img.prefix.client.profile=cp
+
+img.profile.size=200
